[package]
name = "CashExchange"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.30", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = "1.36.0"
